--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,13 @@
     <string name="synopsis">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus nisl leo, imperdiet non magna ut, tempor eleifend turpis. Ut pretium porttitor metus non dictum. Sed ut orci finibus nulla tempor ultrices. Pellentesque scelerisque velit semper, blandit enim convallis, consequat purus. Morbi eget dictum dolor. Suspendisse commodo tempus neque, a euismod purus iaculis et. Maecenas congue, nulla ac cursus commodo, quam tortor consequat mi, vitae finibus risus mi a libero. Vivamus suscipit nec augue mollis tincidunt. Integer hendrerit pretium cursus. Pellentesque sed quam orci. Nullam sit amet auctor velit. Mauris ornare nec leo vel dignissim. Quisque non sodales leo, quis feugiat velit. Nunc sit amet metus vitae elit rhoncus venenatis. Praesent vel hendrerit dui. Proin et nisl malesuada, hendrerit nulla sit amet, interdum ante. Suspendisse mi lectus, cursus quis eros ac, mattis auctor augue. Praesent accumsan neque sapien, nec efficitur massa congue et. Vestibulum lacinia tincidunt metus. Morbi id lacus luctus, faucibus lectus eget, vulputate sem.</string>
     <string name="splash_subtitle">Movie info all in one place</string>
 
+    <!--Crash report related strings-->
+    <string name="crash_toast_text">Rotten Movies has crashed, but a report has been sent to the developer to help fix the issue!</string>
+    <string name="crash_dialog_title">Rotten Movies has crashed</string>
+    <string name="crash_dialog_text">An unexpected error occurred forcing the
+    application to stop. Please help us fix this by sending us error data,
+    all you have to do is click OK.</string>
+    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
+    <string name="crash_dialog_ok_toast">Thank you for your feedback!</string>
+
 </resources>
