--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="action_settings">Settings</string>
     <string name="action_exit">Exit</string>
     <string name="title_activity_result">ResultActivity</string>
-    <string name="synopsis">Lorem ipsum dolor sit amet vako nako eeee ja sam Shakira eee...</string>
+    <string name="synopsis">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</string>
     <string name="splash_subtitle">Movie info all in one place</string>
     <string name="movie_title_placeholder">Movie Title</string>
     <string name="movie_subtitle_placeholder">Movie Subtitle</string>
