--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,8 @@
 
 
     <string name="app_name">Rotten Movies</string>
+    <string name="facebook_app_id">1509735795963305</string>
+    <!-- facebook app ID-->
     <string name="title_section0">Home</string>
     <string name="title_section1">Box Office</string>
     <string name="title_section2">In Theaters</string>
@@ -22,10 +24,12 @@
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="action_refresh">Refresh</string>
     <string name="action_settings">Settings</string>
     <string name="action_exit">Exit</string>
-    <string name="title_activity_result">ResultActivity</string>
+    <string name="action_search">Search</string>
+    <string name="action_share">Share</string>
+    <string name="action_about">About</string>
+
     <string name="synopsis">Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet Lorem ipsum dolor sit amet</string>
     <string name="splash_subtitle">Movie info all in one place\nby: Menil V.</string>
     <string name="movie_title_placeholder">Movie Title</string>
@@ -34,31 +38,22 @@
     <string name="rating_placeholder">Rating: </string>
     <string name="cast_placeholder">Cast: </string>
 
-    <string name="add_to_favourites">Add to Favourites</string>
-    <string name="crash_button">crash_test_button</string>
-    <string name="welcome_msg">Welcome to Home screen\nThe navigation menu is on the left</string>
+
     <string name="about_msg">Rotten Movies is a native Android application for all users who like, share and track latest movies. It provides making a custom favourite list with modern and beautiful designed views. </string>
     <string name="about_msg2">Made by: Menil V.(2014)\n Thanks to: AtlantBH</string>
     <string name="title_placeholder">POSITION. TITLE (YEAR)</string>
     <string name="runtime_placeholder2">RUNTIME:</string>
     <string name="release_placeholder">RELEASE DATE:</string>
     <string name="critics_placeholder">Critics Score:</string>
-    <string name="fragment_more_description">Fragment list more button</string>
     <string name="rtn_link_description">Rotten Tomatoes link</string>
     <string name="imdb_link_description">IMDB link</string>
     <string name="header_placeholder">HEADER PLACEHOLDER</string>
-    <string name="powered_by">Powered\nby:</string>
-    <string name="thanks_to">Thanks\nto:</string>
-    <string name="follow_us">Follow\nus:</string>
-    <string name="slide_arrows">slide arrows</string>
     <string name="btm_img_icon">bottom image icon</string>
     <string name="synopsis_title">Synopsis:\n</string>
     <string name="no_movies_searched">No movies were found.\nTry another search…</string>
     <string name="bck_img_details">Background image details view</string>
     <string name="details_img">details image</string>
     <string name="favourites">Favourite movies</string>
-    <string name="search_string">Search</string>
-    <string name="action_share">Share</string>
-    <string name="action_about">About</string>
+
 
 </resources>
